--- a/wingray/proprietary/audio_effects.conf
+++ b/wingray/proprietary/audio_effects.conf
@@ -15,8 +15,8 @@ libraries {
   visualizer {
     path /system/lib/soundfx/libvisualizer.so
   }
-  pre_processing {
-    path /system/lib/soundfx/libaudiopreprocessing.so
+  moto_pre_processing {
+    path /system/lib/libmoto_ecnswrapper.so
   }
 }
 
@@ -72,17 +72,13 @@ effects {
     library visualizer
     uuid d069d9e0-8329-11df-9168-0002a5d5c51b
   }
-  agc {
-    library pre_processing
-    uuid aa8130e0-66fc-11e0-bad0-0002a5d5c51b
-  }
   aec {
-    library pre_processing
-    uuid bb392ec0-8d4d-11e0-a896-0002a5d5c51b
+    library moto_pre_processing
+    uuid 4ee96e00-bdeb-11e0-98de-0002a5d5c51b
   }
   ns {
-    library pre_processing
-    uuid c06c8400-8e06-11e0-9cb6-0002a5d5c51b
+    library moto_pre_processing
+    uuid 73f03080-bdeb-11e0-a334-0002a5d5c51b
   }
 }
 # Audio preprocessor configurations.
@@ -124,3 +120,9 @@ effects {
 #
 # TODO: add default audio pre processor configurations after debug and tuning phase
 #
+pre_processing {
+    voice_communication {
+        aec {}
+        ns {}
+    }
+}
